--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,11 @@
 <%- include header.ejs %>
 
-<div class="row">
-    <div class="column">
-        <p>HELLO WORLD</p>
-    </div>
-</div>
+<button onClick="login()">Login</button>
+
+<input type='text' id='nameInput' placeholder='Name'>
+<input type='text' id='messageInput' placeholder='Message'>
+
+<textarea id="tb"></textarea>
 
 
 <%- include footer.ejs %>
