--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/stylesheets/app.css" />
     <script src="/bower_components/modernizr/modernizr.js"></script>
   </head>
-  <body>
+  <body ng-app="penny">
 
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">Penny Pincher</a></h1>
+      <h1><a href="/">Penny Pincher</a></h1>
     </li>
      <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -21,7 +21,7 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
+      <li class="active"><a href="#">Right Button</a></li>
       <li class="has-dropdown">
         <a href="#">Right Button Dropdown</a>
         <ul class="dropdown">
@@ -31,9 +31,5 @@
       </li>
     </ul>
 
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
-    </ul>
   </section>
 </nav>
