--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,8 +3,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/foundation/js/foundation.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.lettering.js" ></script>
     <script src="/js/app.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
     <script src="/js/main.js"></script>
+    <!--<script src="/js/wow.js"></script>-->
+        <script src="js/socket.io.js"></script>
+    <script src="//api.nogps.io/v1.js"></script>
   </body>
 </html>
