--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -1,3 +1,9 @@
+header{
+	background-image: url(../images/green-poly.png);
+	min-height: 100%;
+}
+
+
 /* ----------*********** Mikes CSS ***********----------*/
 
 /*-- NAV BAR --*/
