--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -6,8 +6,9 @@
     <script src="/bower_components/jquery/dist/jquery.lettering.js" ></script>
     <script src="/js/app.js"></script>
     <script src="/js/main.js"></script>
-    <!--<script src="/js/wow.js"></script>-->
-        <script src="js/socket.io.js"></script>
+    <script src="/js/wow.js"></script>
     <script src="//api.nogps.io/v1.js"></script>
+    <script src="/js/ejs_production.js"></script>
+
   </body>
 </html>
