--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,7 +25,9 @@
     
   </head>
   <body ng-app="penny">
-<header>
-    <h1><a href="/">Penny Pincher</a></h1>
+<header class="center">
+  <h1><a href="/">Penny Pincher</a></h1>
+    <img src="images/logo.png" alt="pennyPincher logo" class="center"></img>
+
 </header>
 
